adding jq and gradle tools

--- a/Dockerfile-rolling
+++ b/Dockerfile-rolling
@@ -69,8 +69,10 @@ RUN \
     qemu-kvm \
     git-core \
     gitk \
+    gradle \
     htop \
     iptables \
+    jq \
     inetutils-ping \
     lib32ncurses5 \
     lib32ncurses5 \
