--- a/Dockerfile-lts
+++ b/Dockerfile-lts
@@ -69,9 +69,11 @@ RUN \
     qemu-kvm \
     git-core \
     gitk \
+    gradle \
     htop \
     iptables \
     inetutils-ping \
+    jq \
     lib32ncurses5 \
     lib32ncurses5 \
     lib32stdc++6 \
