--- a/Dockerfile-lts-gui
+++ b/Dockerfile-lts-gui
@@ -68,9 +68,11 @@ RUN \
     fail2ban \
     qemu-kvm \
     git-core \
+    gradle \
     htop \
     iptables \
     inetutils-ping \
+    jq \
     lib32ncurses5 \
     lib32ncurses5 \
     lib32stdc++6 \
