--- a/Dockerfile-lts
+++ b/Dockerfile-lts
@@ -102,7 +102,7 @@ RUN \
     ubuntu-vm-builder \
     unzip \
     wget \
-    xmlstarlet && \
+    xmlstarlet \
     gawk \
     libyaml-dev \
     libsqlite3-dev \
@@ -120,9 +120,6 @@ RUN \
     apt-get autoremove && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-# cleanup proxy
-RUN rm /etc/apt/apt.conf.d/01proxy
 
 WORKDIR /root/
 CMD ["/bin/bash"]
