more cleanup of packages

--- a/Dockerfile-lts
+++ b/Dockerfile-lts
@@ -56,35 +56,45 @@ RUN \
     dpkg --add-architecture i386 && \
     apt-get update && \
     apt-get install -y \
-    apt-utils \
     apache2 \
     apt-transport-https \
     apt-utils \
+    autoconf \
+    automake \
+    bison \
     build-essential \
     curl \
     fail2ban \
-    qemu-kvm \
+    gawk \
     git-core \
     gitk \
     gradle \
     htop \
-    iptables \
     inetutils-ping \
+    iptables \
     jq \
-    lib32ncurses5 \
     lib32ncurses5 \
     lib32stdc++6 \
     lib32z1 \
-    lib32z1 \
     libapache2-mod-wsgi \
+    libffi-dev \
+    libgdbm-dev \
+    libgmp-dev \
+    libgmp-dev \
     libjpeg-dev \
     libmemcached-dev \
     libmysqlclient-dev \
+    libncurses5-dev \
+    libreadline6-dev && \
+    libsqlite3-dev \
     libssl-dev \
+    libtool \
+    libvirt-bin \
     libxml2-dev \
     libxslt1-dev \
-    libvirt-bin \
-    locate \
+    libyaml-dev \
+    locates
+    locates \
     lsb-release \
     lxc \
     mysql-client \
@@ -95,28 +105,16 @@ RUN \
     python-dev \
     python-pip \
     python3-pip \
+    qemu-kvm \
     screen \
     software-properties-common \
+    sqlite3 \
     sudo \
     tmux \
     ubuntu-vm-builder \
     unzip \
     wget \
-    xmlstarlet \
-    gawk \
-    libyaml-dev \
-    libsqlite3-dev \
-    sqlite3 \
-    autoconf \
-    libgmp-dev \
-    libgdbm-dev \
-    libncurses5-dev \
-    automake \
-    libtool \
-    bison \
-    libffi-dev \
-    libgmp-dev \
-    libreadline6-dev && \
+    xmlstarlet && \
     apt-get autoremove && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
